--- a/components/Links.module.css
+++ b/components/Links.module.css
@@ -1,13 +1,16 @@
-.container {
-  padding: 0 2rem;
-}
-
 .grid {
   display: flex;
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
   max-width: 800px;
+}
+
+@media (max-width: 600px) {
+  .grid {
+    width: 100%;
+    flex-direction: column;
+  }
 }
 
 .card {
